Optional override of the multicore configuration directory (the one used by the startup script).

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,4 +3,6 @@
 
 - include: solr_debian.yml
   when: ansible_distribution in [ 'Debian', 'Ubuntu' ]
-  
+
+- include: solr_multicore.yml
+  when: solr_multicore_src is defined
